--- a/krathong.css
+++ b/krathong.css
@@ -1,5 +1,6 @@
 			html { 
-			  background: url("https://semicon.github.io/img/BG-web-w.jpg");
+			  background: url("https://semicon.github.io/loykrathong
+/img/BG-web-w.jpg");
 			}
 			.items-slide-45 {
 					animation: 46s linear 0s normal none infinite slide0; 
