--- a/krathong.css
+++ b/krathong.css
@@ -195,7 +195,7 @@
 				}
 
 			.bg-province1 {
-				  background: url("/img/province-1.png") no-repeat #000 center;
+				  background: url("https://semicon.github.io/loykrathong/img/province-1.png") no-repeat #000 center;
 				  background-size: cover;
 				  background-position: top;
 				}
