--- a/krathong.css
+++ b/krathong.css
@@ -297,12 +297,16 @@
 					left: 50vw;
 					top: 0vh;
 					z-index:1000;
+					position: absolute; 
+					transform: translate(-50%,0);
 				  }
 
 				  100% {
 					left: 50vw;
 					top: 0vh;
 					z-index:1000;
+					position: absolute; 
+					transform: translate(-50%,0);
 				  }
 				}
 
@@ -311,12 +315,16 @@
 					left: 50vw;
 					top: 0vh;
 					z-index:1000;
+					position: absolute; 
+					transform: translate(-50%,0);
 				  }
 
 				  100% {
 					left: 50vw;
 					top: 0vh;
 					z-index:1000;
+					position: absolute; 
+					transform: translate(-50%,0);
 				  }
 				}
 
