--- a/krathong.css
+++ b/krathong.css
@@ -295,7 +295,7 @@
 			@-webkit-keyframes slide {
 				  0% {
 					left: 50%;
-					top: 0;
+					top: 50%;
 					z-index:1000;
 					position: absolute; 
 					transform: translate(-50%,-50%);
@@ -303,7 +303,7 @@
 
 				  100% {
 					left: 50%;
-					top: 0;
+					top: 50%;
 					z-index:1000;
 					position: absolute; 
 					transform: translate(-50%,-50%);
@@ -313,7 +313,7 @@
 			@keyframes slide {
 				  0% {
 					left: 50%;
-					top: 0;
+					top: 50%;
 					z-index:1000;
 					position: absolute; 
 					transform: translate(-50%,-50%);
@@ -321,7 +321,7 @@
 
 				  100% {
 					left: 50%;
-					top: 0;
+					top: 50%;
 					z-index:1000;
 					position: absolute; 
 					transform: translate(-50%,-50%);
