--- a/krathong.css
+++ b/krathong.css
@@ -189,7 +189,7 @@
 				}
 				
 			.bg-main {
-				  height: 794px;
+				  height: 80vh;
 				  border-bottom: 3px solid #ffa800;
 				  position: relative;
 				  width: 100%;
