--- a/krathong.css
+++ b/krathong.css
@@ -213,7 +213,7 @@
 
 			@media screen and (max-width: 1024px) {
 					.bg-main {
-						 min-height: 720px;
+						 min-height: 75vh;
 					}
 					.bg-main .river {
 						height: 250px;
